--- a/sass-demo1.html
+++ b/sass-demo1.html
@@ -3,6 +3,7 @@
     <head>
         <title>SCSS Demo 1</title>
         <!-- add link here -->
+        <link href="css/sass-demo1.css" rel="stylesheet">
     </head>
     <body>
         <h1>This is the heading </h1>
